# IM-Server

./: .gitignore  CMakeLists.txt  README.md  chatserver.cpp  chatserver.h  config.cpp  config.h  main.cpp  test  webserver.cpp  webserver.h
CGImysql/: mysql.md  sql_connection_pool.cpp  sql_connection_pool.h
chat/: README.md  buffer.cpp  buffer.h  chat.cpp  chat.h  usermanager.cpp  usermanager.h
httpconn/: httpconn.cpp  httpconn.h
locker/: locker.h
mysql/: init_db.sql  mysql.md  sqlConnectionPool.cpp  sqlConnectionPool.h
threadpool/: threadpool.h  threadpool.md
